# NyxInvoke

./: Cargo.toml  README.md
Resources/: pe_aes.iv  pe_aes.key  pe_data.enc  ps.ps1
src/: common.rs  lib.rs  main.rs  patch.rs  runpe.rs  unhook.rs
