[package]
name = "NyxInvoke"
version = "0.3.0"
edition = "2021"


[lib]
name = "NyxInvoke"
crate-type = ["cdylib"]


[[bin]]
name = "NyxInvoke"
path = "src/main.rs"


[features]
default = []
exe = []
dll = []
compiled_clr = []
compiled_bof = []
compiled_pe = []


[dependencies]
clroxide = { version = "1.1.1", default-features = true }
clap = { version = "4.5.0", features = ["derive"] }
winapi = {version = "0.3.9", features =["minwindef", "winnt","memoryapi","handleapi","errhandlingapi","winbase"]}
ntapi = {version = "0.4.1"}
reqwest = { version = "0.11", features = ["blocking"] }
rust-crypto = "0.2.36"
coffee-ldr = "0.1.3"
base64 = "0.22.1"

[dependencies.windows]
version = "0.54.0"
features = [
    "Win32_System_Diagnostics_Debug", 
    "Win32_System_SystemInformation", 
    "Win32_System_SystemServices", 
    "Win32_System_Memory", 
    "Win32_System_LibraryLoader", 
    "Win32_System_WindowsProgramming", 
    "Win32_System_Threading", 
    "Win32_System_Kernel",
    "Win32_Security"
]

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

